02_object_types/numbers.txt
>>> import sys
>>> sys.getrefcount(24601)
3
>>> sys.getrefcount("aman")
3
>>> sys.getrefcount('aman')
3
>>> sys.getrefcount('hitesh')
3
>>> sys.getrefcount(1)
3221225472
>>> a = 3
>>> a = 'chaiaurcode'
>>> a = 3.14
>>> a = 5
>>> b = 2
>>> a
5
>>> b
2
>>> a = a + 2
>>> a
7
>>> mylist1 = [1, 2, 3]
>>> mylist2 = mylist1
>>> mylist1 = 'chai'
>>> mylist2
[1, 2, 3]
>>> mylist1 = [1, 2, 3]
>>> mylist2
[1, 2, 3]
>>> mylist1[0] = 33
>>> mylist1
[33, 2, 3]
>>> mylist2
[1, 2, 3]
>>> l1 = [1, 2, 3]
>>> l2 = l1
>>> l1
[1, 2, 3]
>>> l2
[1, 2, 3]
>>> l1[0] = 44
>>> l1
[44, 2, 3]
>>> l2
[44, 2, 3]
>>> p1 = [1, 2,3]
>>> p2 = p1
>>> p2 = [1, 2, 3]
>>> p1[0] = 55
>>> p1
[55, 2, 3]
>>> p2
[1, 2, 3]
>>> h1 = [1, 2, 3
... ]
>>> h1
[1, 2, 3]
>>> h2 = h1[:]
>>> h2
[1, 2, 3]
>>> h1[0] = 55
>>> h1
[55, 2, 3]
>>> h2
[1, 2, 3]
>>> import copy
>>> h2 = copy.copy(h1)
>>> h2 = copy.deepcopy(h1)
>>> n = [1, 2, 3]
>>> m = n
>>> n
[1, 2, 3]
>>> m
[1, 2, 3]
>>> m == n
True
>>> m is n
True
>>> n = [1, 2, 3]
>>> m = [1, 2, 3]
>>> m == n
True
>>> m is n
False
>>> x = 2
>>> y = 3
>>> z = 4
>>> x+y
5
>>> 40 + 2.23
42.23
>>> 'chai' + 'code'
'chaicode'
>>> x, y, z
(2, 3, 4)
>>> x + 1, y+2
(3, 5)
>>> y % 2
1
>>> z ** 2
16
>>> z ** 5
1024
>>> 100 ** 2
10000
>>> 2 ** 100
1267650600228229401496703205376
>>> 2 ** 1000
10715086071862673209484250490600018105614048117055336074437503883703510511249361224931983788156958581275946729175531468251871452856923140435
98457757469857480393456777482423098542107460506237114187795418215304647498358194126739876755916554394607706291457119647768654216766042983165
2624386837205668069376
>>> result = 1/3.0
>>> result
0.3333333333333333
>>> repr('chai')
"'chai'"
>>> str('chai')
'chai'
>>> print('chai')
chai
>>> 1 < 2
True
>>> 5.0 == 5.0
True
>>> 4.0 != 5.0
True
>>> x,y,z
(2, 3, 4)
>>> x < y < z
True
>>> x < y and y < z
True
>>> 1 == 2 < 3
False
>>> 1 == 2 and 2 < 3
False
>>> /clear
  File "<stdin>", line 1
    /clear
    ^
SyntaxError: invalid syntax
>>> import math
>>> math.floor(3.5)
3
>>> math.floor(-3.5)
-4
>>> math.trunc(2.8)
2
>>> math.trunc(-2.8)
-2
>>> 2 + 1j
(2+1j)
>>> 2 + 1j * 3
(2+3j)
>>> (2 + 1j) * 3
(6+3j)
>>> 0o20
16
>>> 0x20
32
>>> 0xFF
255
>>> 0b1010093
  File "<stdin>", line 1
    0b1010093
           ^
SyntaxError: invalid digit '9' in binary literal
>>> 0b1010011111
671
>>> oct(64)
'0o100'
>>> hex(64)
'0x40'
>>> bin(64)
'0b1000000'
>>> int('64', 8)
52
>>> int('10000', 2)
16
>>> x= 1
>>> x << 2
4
>>> x | 2
3
>>> import random
>>> random.random(
...
... }}
  File "<stdin>", line 3
    }}
    ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '(' on line 1
>>> random.random()
0.7992824070805351
>>> random.randint(1, 100)
63
>>> random.randint(1, 100)
56
>>> random.randint(1, 100)
82
>>> random.randint(1, 10)
4
>>> random.randint(1, 10)
7
>>> random.choice([1, 2, 3, 4])
3
>>> random.choice([1, 2, 3, 4])
4
>>> random.choice([1, 2, 3, 4])
3
>>> random.choice([1, 2, 3, 4])
3
>>> random.choice([1, 2, 3, 4])
3
>>> random.choice([1, 2, 3, 4])
3
>>> random.choice([1, 2, 3, 4])
3
>>>
>>> random.choice([1, 2, 3, 4])
2
>>> random.choice([1, 2, 3, 4])
1
>>> random.shuffle(mylist)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
    random.shuffle(mylist)
                   ^^^^^^
NameError: name 'mylist' is not defined. Did you mean: 'mylist1'?
>>> random.shuffle(mylist1)
>>> mylist1
[3, 2, 33]
>>> 0.1 + 0.1+ 0.4
0.6000000000000001
>>> 0.1 + 0.1 +  0.1
0.30000000000000004
>>> 0.1 + 0.1 +  0.1- 0.3
5.551115123125783e-17
>>> (0.1 + 0.1 +  0.1)- 0.3
5.551115123125783e-17
>>> from decimal import Decimal
>>> Decimal('0.1') + Decimal('0.1') + Decimal('0.1') - Decimal('0.3')
Decimal('0.0')
>>> # decimal context manager
>>> from fractions import Fraction
>>> myFra = Fraction(2, 7)
>>> myFra
Fraction(2, 7)
>>> setone = {1, 2, 3, 5}
>>> setone & {1, 2}
{1, 2}
>>> setone | {1, 3, 7}
{1, 2, 3, 5, 7}
>>> setone - {1,2, 3, 4}
{5}
>>> setone - {1, 2, 3, 4,5}
set()
>>> type(True)
<class 'bool'>
>>> True == 1
True
>>> True is 1
<stdin-141>:1: SyntaxWarning: "is" with 'int' literal. Did you mean "=="?
False
>>> True + 4
5